# crow

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  test_dnd  test_dnd.c
include/: config.h  crow_mod.h  crow_pak.h  crow_window.h
res/: com.github.moemairu.crow.desktop  crow.desktop
src/: config.c  crow_mod.c  crow_pak.c  crow_window.c  main.c
